RESOLVED FIXED 115096
[GTK][AC] Visible rect doesn't update after resizing a window.
https://bugs.webkit.org/show_bug.cgi?id=115096
Summary [GTK][AC] Visible rect doesn't update after resizing a window.
ChangSeok Oh
Reported 2013-04-24 01:30:11 PDT
This issue appears with clutter AC. Run http://www.webkit.org/blog-files/3d-transforms/poster-circle.html and then resize a window.
Attachments
Patch (1.62 KB, patch)
2013-04-24 02:02 PDT, ChangSeok Oh
no flags
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 (881.60 KB, application/zip)
2013-04-24 07:27 PDT, Build Bot
no flags
ChangSeok Oh
Comment 1 2013-04-24 02:02:28 PDT
Build Bot
Comment 3 2013-04-24 07:27:35 PDT
Comment on attachment 199405 [details] Patch Attachment 199405 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/44852 New failing tests: fast/repaint/japanese-rl-selection-repaint-in-regions.html
Build Bot
Comment 4 2013-04-24 07:27:36 PDT
Created attachment 199452 [details] Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
WebKit Commit Bot
Comment 5 2013-04-24 08:35:19 PDT
Comment on attachment 199405 [details] Patch Clearing flags on attachment: 199405 Committed r149039: <http://trac.webkit.org/changeset/149039>
WebKit Commit Bot
Comment 6 2013-04-24 08:35:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.