[GTK][AC] Visible rect doesn't update after resizing a window. https://bugs.webkit.org/show_bug.cgi?id=115096

Patch by ChangSeok Oh <changseok.oh@collabora.com> on 2013-04-24
Reviewed by Gustavo Noronha Silva.

Once we set actor's a clip rect, we should update the rect when resizing the actor.

No new tests since no new functionality.

* platform/graphics/clutter/GraphicsLayerClutter.cpp:
(WebCore::GraphicsLayerClutter::setSize):

Canonical link: https://commits.webkit.org/133538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149039 268f45cc-cd09-0410-ab3c-d52691b4dbfc